--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -31,11 +31,23 @@ p {
 li {
   font-size: 20px;
 }
-footer p {
+/* footer p {
   font-size: 16px;
-}
+} */
 header p {
   font-style: italic;
 }
-body > article > header > p > {
+/* article > header > p > {
+  font-style: italic;
+} */
+#author {
+  font-style: italic;
+  font-size: 18px;
+}
+#copyright {
+  font-size: 16px;
+}
+.related-author {
+  font-size: 18px;
+  font-weight: bold;
 }
