video 32 css theory #2

--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -1,12 +1,9 @@
-h1,
-h2,
-h3,
-h4,
-p,
-li {
+body {
   font-family: sans-serif;
   color: #444;
+  border-top: 10px solid #1098ad;
 }
+
 h1,
 h2,
 h3 {
@@ -97,4 +94,7 @@ a:hover {
 a:active {
   background-color: black;
   font-style: italic;
+}
+button {
+  border-style: none;
 }
