--- a/starter/02-HTML-Fundamentals/style.css
+++ b/starter/02-HTML-Fundamentals/style.css
@@ -1,7 +1,41 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 body {
   font-family: sans-serif;
   color: #444;
   border-top: 10px solid #1098ad;
+  position: relative;
+}
+.container {
+  width: 850px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
+.main-header {
+  background-color: #f7f7f7;
+  padding: 20px 40px;
+  margin-bottom: 60px;
+  /* height: 80px; */
+}
+nav {
+  font-size: 18px;
+  text-align: center;
+}
+article {
+  margin-bottom: 60px;
+}
+.post-header {
+  margin-bottom: 40px;
+}
+aside {
+  background-color: #f7f7f7;
+  border-top: 5px solid #1098ad;
+  border-bottom: 5px solid #1098ad;
+  padding: 50px 0;
+  width: 500px;
 }
 
 h1,
@@ -17,9 +51,12 @@ h1 {
 h2 {
   font-size: 40px;
   font-family: sans-serif;
+  margin-bottom: 30px;
 }
 h3 {
   font-size: 30px;
+  margin-bottom: 20px;
+  margin-top: 40px;
 }
 h4 {
   font-size: 20px;
@@ -29,9 +66,19 @@ h4 {
 p {
   font-size: 22px;
   line-height: 1.5;
+  margin-bottom: 15px;
+}
+ul,
+ol {
+  margin-left: 50px;
+  margin-bottom: 20px;
 }
 li {
   font-size: 20px;
+  margin-bottom: 10px;
+}
+li:last-child {
+  margin-bottom: 0;
 }
 /* footer p {
   font-size: 16px;
@@ -56,14 +103,7 @@ header p {
 .decoration {
   list-style: none;
 }
-.main-header {
-  background-color: #f7f7f7;
-}
-aside {
-  background-color: #f7f7f7;
-  border-top: 5px solid #1098ad;
-  border-bottom: 5px solid #1098ad;
-}
+
 li:first-child {
   font-weight: bold;
 }
@@ -82,6 +122,12 @@ article p:first-child {
 a:link {
   color: #1098ad;
   text-decoration: none;
+  margin-right: 30px;
+  padding-top: 10px;
+  display: inline-block;
+}
+a:link:last-child {
+  margin-right: 0;
 }
 a:visited {
   color: #1098ad;
@@ -97,4 +143,51 @@ a:active {
 }
 button {
   border-style: none;
+}
+h1::first-letter {
+  font-style: normal;
+  margin-right: 5px;
+}
+h3 + p::first-line {
+  color: red;
+}
+h2 {
+  /* background-color: salmon; */
+  position: relative;
+}
+h2::before {
+  content: "TOP";
+  font-size: 16px;
+  background-color: #ffe70e;
+  color: #444;
+  font-weight: bolder;
+  display: inline-block;
+  padding: 5px 10px;
+  position: absolute;
+  top: -10px;
+  right: -25px;
+}
+.post-img {
+  width: 100%;
+  height: auto;
+}
+nav a:link {
+  /* padding: 20px;
+  margin: 20px;
+  background-color: greenyellow;
+  display: block; */
+}
+button {
+  font-size: 22px;
+  padding: 20px;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid black;
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
+}
+button:hover {
+  border: none;
+  opacity: 0.9;
 }
