--- a/starter/05-Design/style.css
+++ b/starter/05-Design/style.css
@@ -33,11 +33,14 @@ body {
 
 header,
 section {
-  margin-bottom: 48px;
+  margin-bottom: 96px;
 }
 
 h2 {
   margin-bottom: 48px;
+  font-size: 36px;
+  letter-spacing: -0.5px;
+  /* 24/30/36 */
 }
 
 .grid-3-cols {
@@ -53,6 +56,7 @@ h2 {
   text-transform: uppercase;
   font-weight: 500;
   display: inline-block;
+  border-radius: 100px;
 }
 .btn:hover,
 .btn:active {
@@ -76,7 +80,7 @@ header {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   column-gap: 80px;
-  margin-top: 48px;
+  margin-top: 64px;
 }
 
 .header-text-box {
@@ -98,10 +102,14 @@ h1 {
 
 img {
   width: 100%;
+  border-radius: 12px;
 }
 
 /* FEATURES */
 .features-icon {
+  width: 32px;
+  height: 32px;
+  margin-bottom: 24px;
 }
 
 .features-title {
@@ -138,11 +146,23 @@ img {
   margin-bottom: 24px;
   font-size: 18px;
   line-height: 1.7;
+  color: #e6fcf5;
+}
+.testimonial-author {
+  color: #c3fae8;
 }
 
 /* CHAIRS */
+.chair {
+  box-shadow: 0px 20px 30px 0 rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+}
+.chair img {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
 .chair-box {
-  padding: 24px;
+  padding: 32px;
 }
 
 h3 {
@@ -152,14 +172,14 @@ h3 {
 
 .chair-details {
   list-style: none;
-  margin-bottom: 24px;
+  margin-bottom: 48px;
 }
 
 .chair-details li {
   display: flex;
   align-items: center;
   gap: 12px;
-  margin-bottom: 24px;
+  margin-bottom: 16px;
 }
 
 .chair-details li:last-child {
@@ -167,11 +187,14 @@ h3 {
 }
 
 .chair-icon {
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-size: 20px;
 }
 
