--- a/starter/07-Omnifood-Desktop/content/css/general.css
+++ b/starter/07-Omnifood-Desktop/content/css/general.css
@@ -131,7 +131,7 @@ body {
   border-radius: 0.9rem;
 
   /* Put trasition on original "state" */
-  transition: background-color 0.3s;
+  transition: all 0.3s;
 }
 .btn--full:link,
 .btn--full:visited {
@@ -154,6 +154,31 @@ body {
   /* trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
 }
+
+.link:link,
+.link:visited {
+  display: inline-block;
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  transition: all 0.3s;
+}
+.link:hover,
+.link:active {
+  color: #cf711f;
+  border-bottom: 1px solid transparent;
+}
+
 .margin-right-sm {
   margin-right: 1.6rem !important;
+}
+.margin-bottom-md {
+  margin-bottom: 4.8rem !important;
+}
+.center-text {
+  text-align: center;
+}
+strong {
+  font-weight: 500;
 }
