--- a/starter/07-Omnifood-Desktop/content/css/general.css
+++ b/starter/07-Omnifood-Desktop/content/css/general.css
@@ -27,7 +27,10 @@ Paragraph default: 1.06
 #fae5d3
 - Shades:#cf711f 
 - Accents: 
-- GRAY COLOR: #555 #333
+- GRAY COLOR: 
+#6f6f6f (lightest grey allowed on #fdf23e9)
+#555 
+#333
 
 --- 05 SHADOWS
 
