--- a/starter/07-Omnifood-Desktop/content/css/general.css
+++ b/starter/07-Omnifood-Desktop/content/css/general.css
@@ -25,7 +25,10 @@ Paragraph default: 1.06
 - Tints: 
 #fdf2e9
 #fae5d3
-- Shades:#cf711f 
+#eb984e
+- Shades:
+#45260a
+#cf711f 
 - Accents: 
 - GRAY COLOR: 
 #6f6f6f (lightest grey allowed on #fdf23e9)
@@ -33,7 +36,7 @@ Paragraph default: 1.06
 #333
 
 --- 05 SHADOWS
-
+box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 --- 06 BORDER_RADIUS
 Default: 9px
 --- 07 WHITESPACE (px)
@@ -86,7 +89,9 @@ body {
 .grid--4--cols {
   grid-template-columns: repeat(4, 1fr);
 }
-
+.grid--5-cols {
+  grid-template-columns: repeat(5, 1fr);
+}
 .grid--center--v {
   align-items: center;
 }
@@ -126,6 +131,8 @@ body {
   margin-bottom: 1.6rem;
   letter-spacing: 0.75px;
 }
+
+.btn,
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -135,6 +142,11 @@ body {
   font-weight: 600;
   padding: 1.6rem 3.2rem;
   border-radius: 0.9rem;
+
+  /* onlu necessary for .btn */
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
 
   /* Put trasition on original "state" */
   transition: all 0.3s;
@@ -159,6 +171,16 @@ body {
   /* border: 3px solid #fff */
   /* trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
+}
+.btn--form {
+  background-color: #45260a;
+  color: #fdf2e9;
+  align-self: end;
+  padding: 1.2rem;
+}
+.btn--form:hover {
+  background-color: #fdf2e9;
+  color: #45260a;
 }
 
 .link:link,
@@ -192,6 +214,13 @@ body {
   width: 3rem;
   height: 3rem;
   color: #e67e22;
+}
+
+*:focus {
+  outline: none;
+  /* outline: 4px dotted #e67e22;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 /* HELPER/SETTINGS CLASSES */
