Starting with Media queries

--- a/starter/07-Omnifood-Desktop/content/css/general.css
+++ b/starter/07-Omnifood-Desktop/content/css/general.css
@@ -31,6 +31,8 @@ Paragraph default: 1.06
 #cf711f 
 - Accents: 
 - GRAY COLOR: 
+#888
+#767676 (lightest grey allowed on #fff)
 #6f6f6f (lightest grey allowed on #fdf23e9)
 #555 
 #333
