--- a/starter/08-Omnifood-Responsive/content/css/general.css
+++ b/starter/08-Omnifood-Responsive/content/css/general.css
@@ -14,6 +14,7 @@ Default: 1
 Small 1.05
 Medium: 1.2
 Paragraph default: 1.06
+Large 1.8
 
 -- letter Spacing 
 0.05px
@@ -208,6 +209,7 @@ body {
 }
 .list-item {
   font-size: 1.8rem;
+  line-height: 1.2;
   display: flex;
   align-items: center;
   gap: 1.6rem;
