--- a/starter/08-Omnifood-Responsive/content/css/styles.css
+++ b/starter/08-Omnifood-Responsive/content/css/styles.css
@@ -21,7 +21,7 @@
   list-style: none;
   display: flex;
   align-items: center;
-  gap: 3.2rem;
+  gap: 4.8rem;
 }
 .main-nav-link:link,
 .main-nav-link:visited {
@@ -48,6 +48,24 @@
   background-color: #cf711f;
 }
 
+/* Mobile */
+
+.btn-mobile-nav {
+  border: none;
+  background: none;
+  cursor: pointer;
+  display: none;
+}
+.icon-mobile-nav {
+  width: 4.8rem;
+  height: 4.8rem;
+  color: #333;
+  cursor: pointer;
+}
+.icon-mobile-nav[name="close-outline"] {
+  display: none;
+}
+
 /*******************************/
 /* HERO SECTION */
 /*******************************/
@@ -56,6 +74,7 @@
   background-color: #fdf2e9;
   padding: 4.8rem 0 9.6rem 0;
 }
+
 .hero {
   max-width: 130rem;
   margin: 0 auto;
@@ -407,6 +426,7 @@
 }
 .cta {
   display: grid;
+  /* 2/3 = 66.6% + 1/3 = 33.33% */
   grid-template-columns: 2fr 1fr;
   /* background-color: #e67e22; */
   box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
