--- a/starter/08-Omnifood-Responsive/content/css/general.css
+++ b/starter/08-Omnifood-Responsive/content/css/general.css
@@ -59,12 +59,18 @@ html {
   /* 10px / 16px = 0.625 = 62.50% */
   /* Percentage of user's browser font-size setting */
   font-size: 62.5%;
+
+  /*  Only works if there is noting absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 body {
   font-family: "Rubik", sans-serif;
   line-height: 1;
   font-weight: 400;
   color: #555;
+
+  /*  Only works if there is noting absolutely positioned in relation to body */
+  overflow-x: hidden;
 }
 
 /*******************************/
@@ -146,7 +152,7 @@ body {
   padding: 1.6rem 3.2rem;
   border-radius: 0.9rem;
 
-  /* onlu necessary for .btn */
+  /* only necessary for .btn */
   border: none;
   cursor: pointer;
   font-family: inherit;
