--- a/starter/08-Omnifood-Responsive/content/css/queries.css
+++ b/starter/08-Omnifood-Responsive/content/css/queries.css
@@ -62,7 +62,7 @@
 @media (max-width: 59em) {
   html {
     /* 8px / 16px = 0.5 = 50% */
-    font-size: 50%;
+    font-size: 50% !important;
   }
 
   .hero {
@@ -106,6 +106,9 @@
   .btn--form {
     margin-top: 1.2rem;
   }
+  .pricing-plan {
+    width: 95%;
+  }
 
   /* MOVILE NAVIGATION */
   .btn-mobile-nav {
@@ -118,11 +121,13 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    transform: translateX(100%);
 
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all 0.5s;
+    /* transition: all 0.5s; */
+    transition: all 250ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s;
 
     /* hide navigation */
     /* Allows NO trasitions */
@@ -141,6 +146,7 @@
     opacity: 1;
     pointer-events: auto;
     visibility: visible;
+    transform: translateX(0%);
   }
   .nav-open .icon-mobile-nav[name="close-outline"] {
     display: block;
@@ -158,6 +164,105 @@
   }
 }
 
+/*******************************/
+/* 704px / 16px = 44em */
+/* BELOW 704px (small Tablets) */
+/*******************************/
+
+@media (max-width: 44em) {
+  .grid--3--cols,
+  .grid--4--cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .diets {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+  .heading-secondary {
+    margin-bottom: 4.8rem;
+  }
+  .pricing-plan {
+    width: 100%;
+  }
+  .grid--footer {
+    grid-template-columns: repeat(6, 1fr);
+  }
+  .logo-col,
+  .address-col {
+    grid-column: span 3;
+  }
+  .nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.4rem;
+  }
+}
+
+/*******************************/
+/* 550px / 16px = 34em */
+/* BELOW 544px ( small phones) */
+/*******************************/
+
+@media (max-width: 34em) {
+  .grid {
+    row-gap: 4.8rem;
+  }
+  .grid--2--cols,
+  .grid--3--cols,
+  .grid--4--cols {
+    grid-template-columns: 1fr;
+  }
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+    width: 100%;
+  }
+  .btn--full:link,
+  .btn--full:visited {
+    margin-bottom: 1rem;
+  }
+  .section-hero {
+    padding: 2.4rem 0 6.4rem 0;
+  }
+  .hero {
+    padding: 0 3.2rem;
+  }
+  .hero-img {
+    width: 90%;
+  }
+  .logos img {
+    height: 1.2rem;
+  }
+  /* need to place grid items into a specific cell */
+  .step-img-box:nth-child(2) {
+    grid-row: 1;
+  }
+  .step-img-box:nth-child(6) {
+    grid-row: 5;
+  }
+  /*  need to move the gap down */
+  .step-img-box {
+    transform: translateY(2.4rem);
+  }
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.4rem;
+  }
+  .cta {
+    grid-template-columns: 1fr;
+  }
+  .cta-text-box {
+    padding: 3.2rem;
+  }
+  .cta-img-box {
+    height: 36rem;
+    grid-row: 1;
+  }
+}
 /* 
 - FONT SIZE (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
